--- a/src/index.css
+++ b/src/index.css
@@ -61,3 +61,13 @@ a{
 .mpza{
   color: aquamarine;
 }
+
+#really_cool_div{
+  display: flex;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
+}
